[gd_scene load_steps=6 format=3 uid="uid://dang7tjw4gkgi"]

[ext_resource type="Script" path="res://UI/crafting-station/crafting-station-ui.gd" id="1_t2ta2"]
[ext_resource type="Theme" uid="uid://c1tg160hnf0q8" path="res://assets/UI/themes/UI-elements/panel-container-primary.tres" id="2_as66b"]
[ext_resource type="PackedScene" uid="uid://xttesm4el1dg" path="res://UI/menu/inventory/resources-ui.tscn" id="2_retwm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gy2tt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ehau5"]

[node name="CraftingStationUI" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(800, 400)
script = ExtResource("1_t2ta2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -612.0
offset_top = -289.0
offset_right = 612.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme = ExtResource("2_as66b")

[node name="ResourcesUI" parent="HBoxContainer/PanelContainer" instance=ExtResource("2_retwm")]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_as66b")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30

[node name="LocationContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/LocationContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_gy2tt")

[node name="Title" type="Label" parent="HBoxContainer/PanelContainer2/MarginContainer/LocationContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "
"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/LocationContainer"]
custom_minimum_size = Vector2(600, 350)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="Resources" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/LocationContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/LocationContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_ehau5")

[node name="Leave" type="Button" parent="HBoxContainer/PanelContainer2/MarginContainer/LocationContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Perhaps not"
flat = true

[connection signal="pressed" from="HBoxContainer/PanelContainer2/MarginContainer/LocationContainer/PanelContainer2/Leave" to="." method="_on_leave_pressed"]
